Sat Nov 21 04:44:20 UTC 2009  Abdullah Sowayan  <sowayan@gmail.com>

        * tao/VarOut_T.h:
        * tao/VarOut_T.inl:

          Fixed Bug 3766.

Fri Nov 20 19:52:15 UTC 2009  Abdullah Sowayan  <sowayan@gmail.com>

        * tao/VarOut_T.h:
        * tao/VarOut_T.inl:

          Revert the changes and reopen Bug 3766. The prior commit causes build issues.

Fri Nov 20 18:46:27 UTC 2009  Abdullah Sowayan  <sowayan@gmail.com>

        * tao/VarOut_T.h:
        * tao/VarOut_T.inl:

          Fixed Bug 3766.

Fri Nov 20 16:55:01 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * NEWS:

          Update for next release.

Fri Nov 20 13:53:51 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * NEWS:

          Update for next release.

Fri Nov 20 13:02:24 UTC 2009  Denis Budko  <denis.budko@remedy.nl>

        * orbsvcs/tests/Security/Callback/server.cpp:

                  Test is converted to use new test framework and added to fuzz build.

Fri Nov 20 10:03:43 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/Bug_3766_Regression/server.cpp:
          Resolved compiler error related to invisible
          characters on Linux.

Fri Nov 20 09:28:50 UTC 2009  Denis Budko  <denis.budko@remedy.nl>

        * orbsvcs/DevGuideExamples/EventServices/OMG_TypedEC/run_test.pl:
        * orbsvcs/DevGuideExamples/EventServices/RTEC_Federated/run_test.pl:
        * orbsvcs/DevGuideExamples/EventServices/OMG_SupplierSideEC/run_test.pl:
        * orbsvcs/DevGuideExamples/EventServices/RTEC_Filter/run_test.pl:
        * orbsvcs/DevGuideExamples/EventServices/OMG_Basic/run_test.pl:
        * orbsvcs/DevGuideExamples/EventServices/RTEC_MCast_Federated/run_test.pl:
        * orbsvcs/DevGuideExamples/EventServices/RTEC_Basic/run_test.pl:
        * orbsvcs/tests/Security/EndpointPolicy/run_test.pl:
        * DevGuideExamples/Multithreading/ThreadPool/MessengerServer.cpp:
        * DevGuideExamples/Multithreading/ThreadPool/MessengerClient.cpp: